# polymarket-hft

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
config/: scrape_config.example.yaml
configs/: config.example.yaml
configs/jobs/: alternativeme.yaml
docs/: architecture.md  cli.md  cli_examples.md  client.md  library.md
migrations/: 001_init.sql
src/: cli.rs  client.rs  commands.rs  config.rs  data.rs  engine.rs  error.rs  gamma.rs  ingestor.rs  lib.rs  main.rs  scheduler.rs  serve.rs  storage.rs  task.rs  web.rs
src/cli/: alternativeme.rs  clob.rs  clob_ws.rs  cmc.rs  coingecko.rs  data.rs  ds.rs  gamma.rs  rtds.rs  serve.rs
src/cli/data/: commands.rs  handlers.rs
src/cli/gamma/: args.rs  commands.rs  handlers.rs
src/client/: alternativeme.rs  clob.rs  coingecko.rs  data.rs  gamma.rs  http.rs  rtds.rs
src/client/clob/: client.rs  (+5 more)
src/commands/: common.rs  data.rs  gamma.rs
src/config/: job.rs  settings.rs
src/data/: client.rs  types.rs
src/engine/: config.rs  dispatcher.rs  scheduler.rs  types.rs
src/gamma/: client.rs  types.rs
src/ingestor/: manager.rs
src/storage/: archiver.rs  cache.rs  local.rs  model.rs  redis.rs  sqlite.rs  timescale.rs
src/web/: handlers.rs  templates.rs
templates/: dashboard.html  events.html  jobs.html  metrics.html  status.html  styles.css
templates/partials/: job_form.html  metrics.html  nav.html  refresh.html
tests/: alternativeme_api_tests.rs  clob_api_tests.rs  clob_ws_tests.rs  coingecko_api_tests.rs  coinmarketcap_api_tests.rs  data_api_tests.rs  gamma_api_tests.rs  rtds_tests.rs
(+43 files in other folders)
